salesforce/generated/sunrun_ingest_api/desktop-mf/objects/desktop_mf_Fact_Orders__dll/fields/Ship_Date_Key__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date_Key__c</fullName>
    <label>Ship Date Key</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Ship_Date_Key</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Date</type>
</CustomField>