salesforce/generated/sunrun_ingest_api/desktop-mf/objects/desktop_mf_Fact_Orders__dll/fields/Ship_Mode__c.field-meta.xml
<CustomField>
    <fullName>Ship_Mode__c</fullName>
    <label>Ship Mode</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Ship_Mode</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>